@@ -1,5 +1,3 @@
-=pod
-
 =head1 NAME
 
 Clustericious::Log - A Log::Log4perl wrapper for use with Clustericious.
@@ -25,7 +23,7 @@ for logging patterns (see the example).
 
 =head1 EXAMPLE
 
-Here is a sample $HOME/etc/log4perl.conf :
+Here is a sample ~/etc/log4perl.conf :
 
  log4perl.rootLogger=TRACE, LOGFILE
  log4perl.appender.LOGFILE=Log::Log4perl::Appender::File
@@ -42,7 +40,7 @@ Here is a sample $HOME/etc/log4perl.conf :
 =item init_logging
 
 Start logging.  Looks for log4perl.conf or $app.log4perl.conf
-in $HOME/etc, /util/etc and /etc.
+in ~/etc, /util/etc and /etc.
 
 =item tail
 
